feat(pom): add profiles for integration tests and skip configuration
- Introduced a profile for running integration tests using the
  maven-failsafe-plugin, allowing for separate execution of
  integration tests.
- Added a profile to skip integration tests during regular builds
  with the maven-surefire-plugin, enhancing build efficiency.